--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "simple-peer": "^9.9.3",
+    "socket.io": "^3.0.4",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
