--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/socket.io-client": "^1.4.34",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
@@ -19,6 +20,7 @@
     "react-scripts": "4.0.1",
     "simple-peer": "^9.9.3",
     "socket.io": "^3.0.4",
+    "socket.io-client": "^3.0.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
